<resources>
    <string name="app_name">Task Manager App</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="email">Email </string>
    <string name="password">Password </string>
    <string name="confirm_password">Confirm Password </string>
    <string name="create_acc">Create Account</string>
    <string name="create_ur_acc">Create your Account</string>
    <string name="already_have_an_account_login">Already have an account? Log in</string>
    <string name="don_t_have_an_account_sign_up">Do not have an account? Sign up!</string>
    <string name="success">Congratulations, you are signed in!</string>
    <string name="login">Log in</string>
    <string name="brand_name">Add Task</string>
    <string name="todo">TODO</string>
</resources>